--- a/analysis/prognosis/Prognosis_locked/Validation/SVM_val.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Validation/SVM_val.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
    "source": [
     "df_final = pd.read_table(\"full_data_validation.tsv\",sep=\" \")\n",
     "\n",
-    "eln = [112,113,114]\n",
-    "comp =list(range(88,112)) \n",
+    "eln = [113,114,115]\n",
+    "comp =list(range(89,113)) \n",
     "#comp_overlap = list(range(167,197))\n",
     "age = [83]\n",
     "\n",
@@ -65,7 +65,7 @@
     "tmp = df_final.iloc[:,all_cyto][df_final.iloc[:,all_cyto] >0].count()\n",
     "cyto = [df_final.columns.get_loc(c) for c in tmp[tmp>df_final.shape[0]*0.02].keys() if c in df_final]\n",
     "\n",
-    "clin=list(range(84,87))\n",
+    "clin=list(range(84,88))\n",
     "demo=[82,83]\n",
     "demo_without_age = [82]\n",
     "\n",
@@ -144,13 +144,13 @@
     "\n",
     "\n",
     "\n",
-    "dict_features_type_final_comp = dict(zip((\"cyto_gen_demo\",\"gen_cyto_clin_demo\",\"demo\",\"clin\",\"gen\",\"cyto\",\"comp\",\"eln\",\"gen\",\"cyto\",\"gen_cyto\",\"eln_gen_cyto\",\"comp_gen_cyto\",\"eln_comp\",\"eln_clin_demo\",\"comp_clin_demo\",\"eln_comp_gen_cyto_clin_demo\"),\n",
-    "                                         (cyto_gen_demo,gen_cyto_clin_demo,demo,clin,gen,cyto,comp,eln,gen,cyto,gen_cyto,eln_gen_cyto,comp_gen_cyto,eln_comp,eln_clin_demo,comp_clin_demo,eln_comp_gen_cyto_clin_demo)))\n",
+    "dict_features_type_final_comp = dict(zip((\"gen_cyto_clin_demo\",\"clin\",\"eln_clin_demo\",\"comp_clin_demo\",\"eln_comp_gen_cyto_clin_demo\"),\n",
+    "                                         (gen_cyto_clin_demo,clin,eln_clin_demo,comp_clin_demo,eln_comp_gen_cyto_clin_demo)))\n",
     "estimator = FastSurvivalSVM(max_iter=1000, tol=1e-6, random_state=17)\n",
     "param_grid = {'alpha': 10. ** np.array([-6,-5,-4,-3,-2,-1,0]),'optimizer':[\"avltree\"]}\n",
     "cv = ShuffleSplit(n_splits=5,random_state=17)\n",
     "gcv = GridSearchCV(estimator, param_grid, scoring=score_survival_model,\n",
-    "                   n_jobs=50, iid=False, refit=True,\n",
+    "                   n_jobs=-1, iid=False, refit=True,\n",
     "                   cv=cv)\n",
     "df=pd.DataFrame(columns=dict_features_type_final_comp.keys())\n",
     "for key,item in dict_features_type_final_comp.items():\n",
