--- a/analysis/prognosis/Prognosis_locked/Validation/validation_data_prep.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Validation/validation_data_prep.ipynb
@@ -58,36 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>1540</li>\n",
-       "\t<li>15</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 1540\n",
-       "\\item 15\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 1540\n",
-       "2. 15\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 1540   15"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -119,24 +92,24 @@
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
-       "\t<li>1379</li>\n",
-       "\t<li>68</li>\n",
+       "\t<li>1540</li>\n",
+       "\t<li>17</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 1379\n",
-       "\\item 68\n",
+       "\\item 1540\n",
+       "\\item 17\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 1379\n",
-       "2. 68\n",
+       "1. 1540\n",
+       "2. 17\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 1379   68"
+       "[1] 1540   17"
       ]
      },
      "metadata": {},
@@ -146,24 +119,78 @@
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
-       "\t<li>1176</li>\n",
-       "\t<li>88</li>\n",
+       "\t<li>1379</li>\n",
+       "\t<li>69</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 1176\n",
-       "\\item 88\n",
+       "\\item 1379\n",
+       "\\item 69\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 1176\n",
-       "2. 88\n",
+       "1. 1379\n",
+       "2. 69\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 1176   88"
+       "[1] 1379   69"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>1379</li>\n",
+       "\t<li>90</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1379\n",
+       "\\item 90\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1379\n",
+       "2. 90\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1379   90"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>203</li>\n",
+       "\t<li>89</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 203\n",
+       "\\item 89\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 203\n",
+       "2. 89\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 203  89"
       ]
      },
      "metadata": {},
@@ -171,7 +198,8 @@
     }
    ],
    "source": [
-    "data_clin <- read.csv(file=\"ULM.csv\", header=TRUE, sep=\",\")[,c(\"ID\",\"Gender\",\"Age\",\"BM_Blasts\",\"PLT\",\"WBC\",\"OS\",\"OS_Status\")]\n",
+    "data_clin <- read.csv(file=\"ULM.csv\", header=TRUE, sep=\",\")[,c(\"ID\",\"Gender\",\"Age\",\"HB\",\"BM_Blasts\",\"PLT\",\"WBC\",\"OS\",\"OS_Status\")]\n",
+    "# data_clin <- read.csv(file=\"ULM.csv\", header=TRUE, sep=\",\")[,c(\"ID\",\"Gender\",\"Age\",\"BM_Blasts\",\"PLT\",\"WBC\",\"OS\",\"OS_Status\")]\n",
     "data_clin$OS_Status <- ifelse(data_clin$OS_Status==\"TRUE\",1,0)\n",
     "\n",
     "data2 <- read.table(file=\"AMLSG_Classification.txt\", header = TRUE, sep = \"\")[,c(\"ID\",\"NPM1\",\"CEBPA_bi\",\"inv16\",\"t15_17\",\"t8_21\",\"t6_9\",\"inv3\")]\n",
@@ -223,18 +251,46 @@
     "nejm_data <- merge(nejm_data,data_genes,by=\"ID\")   ### not same number of patients\n",
     "dim(nejm_data)\n",
     "nejm_data <- merge(nejm_data,val_data,by=\"ID\")\n",
-    "cols <- colnames(nejm_data)\n",
-    "nejm_data <- nejm_data[,c(1,9,10,16:68,87,88,11:15,83:86,69:82,7,8,2:6,89)]\n",
+    "# colnames(nejm_data)\n",
+    "nejm_data <- nejm_data[,c(1,10,11,17:69,88,89,12:16,84:87,70:83,8,9,2:7,90)]\n",
     "rownames(nejm_data) <- nejm_data$ID\n",
+    "dim(nejm_data)\n",
     "nejm_data <- nejm_data[-1]\n",
     "nejm_data <- na.omit(nejm_data)   ### complete case \n",
-    "dim(nejm_data)\n",
     "write.table(nejm_data,\"nejm_data.tsv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "all.equal(read.table(\"tmp.tsv\",sep =\" \",header=T),read.table(\"nejm_data.tsv\",sep =\" \",header=T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,48 +384,6 @@
     "tmp <- cbind(tmp,dummy('eln_2017',tmp, sep = \"_\"))\n",
     "\n",
     "write.table(tmp,\"full_data_validation.tsv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "  0   1 \n",
-       "829 347 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "table(tmp$eln_2017_favorable)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "     adverse    favorable intermediate \n",
-       "         490          347          339 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "table(tmp$eln_2017)"
    ]
   },
   {
