--- a/analysis/prognosis/Prognosis_locked/Validation/ELN.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Validation/ELN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,8 @@
     "\n",
     "    df = df_merge.copy(deep=True)\n",
     "    df.loc[:, 'eln_2017'] = np.nan\n",
+    "    df.loc[(df.eln_2017.isnull()) & (df.inv_16 == 1), 'eln_2017'] = 'favorable'\n",
+    "    df.loc[(df.eln_2017.isnull()) & (df.t_15_17 == 1), 'eln_2017'] = 'favorable'\n",
     "    df.loc[(df.eln_2017.isnull()) & (df.t_9_11 == 1), 'eln_2017'] = 'intermediate'\n",
     "    df.loc[(df.eln_2017.isnull()) & (df.complex == 1), 'eln_2017'] = 'adverse'\n",
     "    df.loc[(df.eln_2017.isnull()) & (df.TP53 == 1), 'eln_2017'] = 'adverse'\n",
@@ -99,6 +101,12 @@
     "\n",
     "    df = df_merge.copy(deep=True)\n",
     "    df.loc[:, 'eln_2017'] = np.nan\n",
+    "    \n",
+    "    df.loc[(df.eln_2017.isnull()) & (df.inv_16 == 1), 'rules'] = 'inv_16'\n",
+    "    df.loc[(df.eln_2017.isnull()) & (df.inv_16 == 1), 'eln_2017'] = 'favorable'\n",
+    "    \n",
+    "    df.loc[(df.eln_2017.isnull()) & (df.t_15_17 == 1), 'rules'] = 't_15_17'\n",
+    "    df.loc[(df.eln_2017.isnull()) & (df.t_15_17 == 1), 'eln_2017'] = 'favorable'\n",
     "    \n",
     "    df.loc[(df.eln_2017.isnull()) & (df.t_9_11 == 1), 'rules'] = 't_9_11'\n",
     "    df.loc[(df.eln_2017.isnull()) & (df.t_9_11 == 1), 'eln_2017'] = 'intermediate'\n",
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,19 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "adverse         490\n",
-       "favorable       347\n",
-       "intermediate    339\n",
+       "adverse         465\n",
+       "favorable       388\n",
+       "intermediate    323\n",
        "Name: eln_2017, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
