--- a/analysis/prognosis/Prognosis_locked/Validation/validation_data_prep.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Validation/validation_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -168,33 +168,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>203</li>\n",
-       "\t<li>89</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 203\n",
-       "\\item 89\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 203\n",
-       "2. 89\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 203  89"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -261,31 +234,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 91,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "all.equal(read.table(\"tmp.tsv\",sep =\" \",header=T),read.table(\"nejm_data.tsv\",sep =\" \",header=T))"
+    "# DATASET NO ITD COMPONENT SEPARATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp <- read.table(\"nejm_data_eln.tsv\",sep =\" \",header=T)\n",
+    "rownames(tmp) <- tmp$X\n",
+    "tmp$X <- NULL\n",
+    "genes <- colnames(tmp)[1:57]\n",
+    "cyto <- colnames(tmp)[58:80]\n",
+    "\n",
+    "factors <- c(\"ZRSR2\",\"U2AF1\",\"SRSF2\",\"SF3B1\",\"ASXL1\",\"STAG2\",\"BCOR\",\"RUNX1\",\"EZH2\",\"MLL\",\"PHF6\",\"SF1\",\"NF1\",\"CUX1\")    #\"SETBP1\" missing\n",
+    "mol_defining <- c('NPM1','CEBPA_bi','inv16','t15_17','t8_21','t6_9','inv3','DNMT3A','IDH1','IDH2','WT1',factors)\n",
+    "\n",
+    "tmp$full_component_t_15_17 <- ifelse(tmp$t_15_17==1,1,0)\n",
+    "\n",
+    "tmp$full_component_inv_16 <- ifelse(tmp$inv_16==1,1,0) \n",
+    "\n",
+    "tmp$full_component_t_8_21 <- ifelse(tmp$t_8_21==1,1,0)\n",
+    "\n",
+    "tmp$full_component_t_11 <- ifelse((tmp$t_v_11==1 | tmp$t_9_11==1),1,0)   \n",
+    "\n",
+    "tmp$full_component_t_6_9 <- ifelse(tmp$t_6_9==1,1,0)\n",
+    "\n",
+    "tmp$full_component_inv_3 <- ifelse(tmp$inv_3==1,1,0)\n",
+    "\n",
+    "tmp$full_component_additions <- ifelse((tmp$add_8==1 | tmp$add_11==1 | tmp$add_13==1 | tmp$add_21==1 | tmp$add_22==1),1,0)\n",
+    "\n",
+    "tmp$full_component_TP53_complex <- ifelse((tmp$TP53==1 | tmp$complex==1) ,1,0)\n",
+    "\n",
+    "tmp$full_component_NPM1 <- ifelse(tmp$NPM1==1,1,0)\n",
+    "\n",
+    "tmp$full_component_CEBPA_bi <- ifelse(tmp$CEBPA_bi==1,1,0) \n",
+    "\n",
+    "tmp$full_component_DNMT3A_IDH1_2 <- ifelse((tmp$DNMT3A==1 & (tmp$IDH1==1 | tmp$IDH2==1)),1,0)\n",
+    "\n",
+    "tmp$full_component_WT1 <- ifelse(tmp$WT1==1,1,0)\n",
+    "\n",
+    "tmp$full_component_chr_splicing_multiple <- ifelse((rowSums(tmp[,factors])>1) ,1,0)\n",
+    "\n",
+    "tmp$full_component_chr_splicing_1 <- ifelse((rowSums(tmp[,factors])==1),1,0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Handling additions\n",
+    "tmp[tmp$full_component_additions==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 |\n",
+    "                                     tmp$full_component_t_11==1 | tmp$full_component_t_6_9==1  | tmp$full_component_inv_3==1 |\n",
+    "                                     tmp$full_component_NPM1==1 | tmp$full_component_CEBPA_bi==1 | \n",
+    "                                     tmp$full_component_DNMT3A_IDH1_2==1 |  tmp$full_component_WT1==1  ),\"full_component_additions\"] <- 0\n",
+    "\n",
+    "\n",
+    "tmp[tmp$full_component_additions==1 & (tmp$full_component_TP53_complex==1) & !(tmp$del_7==1 | tmp$del_17==1 | tmp$del_5==1 | tmp$del_9==1  | tmp$minusy |\n",
+    "                                                                           tmp$del_20==1 | tmp$del_18==1  | tmp$del_12==1 | tmp$del_3==1),\"full_component_additions\"] <- 0\n",
+    "\n",
+    "# Handling DNMT3A IDH\n",
+    "tmp[tmp$full_component_DNMT3A_IDH1_2==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 |  tmp$full_component_t_11==1 |\n",
+    "                                         tmp$full_component_t_6_9==1 |  tmp$full_component_inv_3==1 | tmp$full_component_TP53_complex==1 | tmp$full_component_NPM1==1 |\n",
+    "                                          tmp$full_component_CEBPA_bi==1 |  tmp$full_component_additions==1 ),\"full_component_DNMT3A_IDH1_2\"] <- 0\n",
+    "\n",
+    "\n",
+    "# Handling WT1\n",
+    "tmp[tmp$full_component_WT1==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 |  tmp$full_component_t_11==1 |\n",
+    "                               tmp$full_component_t_6_9==1  | tmp$full_component_inv_3==1 | tmp$full_component_TP53_complex==1 | tmp$full_component_NPM1==1 |\n",
+    "                                tmp$full_component_CEBPA_bi==1  ),\"full_component_WT1\"] <- 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Handling chr_splicing_1\n",
+    "tmp[tmp$full_component_chr_splicing_1==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 | \n",
+    "                                          tmp$full_component_t_11==1 | tmp$full_component_t_6_9==1 |  tmp$full_component_inv_3==1 |\n",
+    "                                          tmp$full_component_TP53_complex==1 | tmp$full_component_NPM1==1 | tmp$full_component_CEBPA_bi==1  ),\"full_component_chr_splicing_1\"] <- 0\n",
+    "\n",
+    "tmp$full_component_not_assigned <- ifelse(rowSums(tmp[,colnames(tmp[,startsWith(colnames(tmp),\"full_component_\"),])])==0 ,1,0)\n",
+    "\n",
+    "tmp$full_component_no_events <- ifelse(rowSums(tmp[,c(genes,cyto)])==0,1,0)\n",
+    "\n",
+    "tmp$overlap <- 0\n",
+    "tmp[rowSums(tmp[,colnames(tmp[,startsWith(colnames(tmp),\"full_component_\"),])])>1,\"overlap\"] <- 1\n",
+    "\n",
+    "tmp <- cbind(tmp,dummy('eln_2017',tmp, sep = \"_\"))\n",
+    "\n",
+    "write.table(tmp,\"full_data_validation_NO_ITD.tsv\")"
    ]
   },
   {
@@ -297,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +362,7 @@
     "\n",
     "tmp$full_component_inv_3 <- ifelse((tmp$inv_3==1),1,0)\n",
     "\n",
-    "tmp$full_component_additions <- ifelse((tmp$add_8==1 | tmp$add_13==1 | tmp$add_21==1 | tmp$add_22==1),1,0)\n",
+    "tmp$full_component_additions <- ifelse((tmp$add_8==1 | tmp$add_11==1 | tmp$add_13==1 | tmp$add_21==1 | tmp$add_22==1),1,0)\n",
     "\n",
     "tmp$full_component_TP53_complex <- ifelse((tmp$TP53==1 | tmp$complex==1) ,1,0)\n",
     "\n",
@@ -391,99 +429,6 @@
     "tmp <- cbind(tmp,dummy('eln_2017',tmp, sep = \"_\"))\n",
     "\n",
     "write.table(tmp,\"full_data_validation.tsv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# DATASET NO ITD COMPONENT SEPARATION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp <- read.table(\"nejm_data_eln.tsv\",sep =\" \",header=T)\n",
-    "rownames(tmp) <- tmp$X\n",
-    "tmp$X <- NULL\n",
-    "genes <- colnames(tmp)[1:57]\n",
-    "cyto <- colnames(tmp)[58:80]\n",
-    "\n",
-    "factors <- c(\"ZRSR2\",\"U2AF1\",\"SRSF2\",\"SF3B1\",\"ASXL1\",\"STAG2\",\"BCOR\",\"RUNX1\",\"EZH2\",\"MLL\",\"PHF6\",\"SF1\",\"NF1\",\"CUX1\")    #\"SETBP1\" missing\n",
-    "mol_defining <- c('NPM1','CEBPA_bi','inv16','t15_17','t8_21','t6_9','inv3','DNMT3A','IDH1','IDH2','WT1',factors)\n",
-    "\n",
-    "tmp$full_component_t_15_17 <- ifelse(tmp$t_15_17==1,1,0)\n",
-    "\n",
-    "tmp$full_component_inv_16 <- ifelse(tmp$inv_16==1,1,0) \n",
-    "\n",
-    "tmp$full_component_t_8_21 <- ifelse(tmp$t_8_21==1,1,0)\n",
-    "\n",
-    "tmp$full_component_t_11 <- ifelse((tmp$t_v_11==1 | tmp$t_9_11==1),1,0)   \n",
-    "\n",
-    "tmp$full_component_t_6_9 <- ifelse(tmp$t_6_9==1,1,0)\n",
-    "\n",
-    "tmp$full_component_inv_3 <- ifelse(tmp$inv_3==1,1,0)\n",
-    "\n",
-    "tmp$full_component_additions <- ifelse((tmp$add_8==1 | tmp$add_13==1 | tmp$add_21==1 | tmp$add_22==1),1,0)\n",
-    "\n",
-    "tmp$full_component_TP53_complex <- ifelse((tmp$TP53==1 | tmp$complex==1) ,1,0)\n",
-    "\n",
-    "tmp$full_component_NPM1 <- ifelse(tmp$NPM1==1,1,0)\n",
-    "\n",
-    "tmp$full_component_CEBPA_bi <- ifelse(tmp$CEBPA_bi==1,1,0) \n",
-    "\n",
-    "tmp$full_component_DNMT3A_IDH1_2 <- ifelse((tmp$DNMT3A==1 & (tmp$IDH1==1 | tmp$IDH2==1)),1,0)\n",
-    "\n",
-    "tmp$full_component_WT1 <- ifelse(tmp$WT1==1,1,0)\n",
-    "\n",
-    "tmp$full_component_chr_splicing_multiple <- ifelse((rowSums(tmp[,factors])>1) ,1,0)\n",
-    "\n",
-    "tmp$full_component_chr_splicing_1 <- ifelse((rowSums(tmp[,factors])==1),1,0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Handling additions\n",
-    "tmp[tmp$full_component_additions==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 |\n",
-    "                                     tmp$full_component_t_11==1 | tmp$full_component_t_6_9==1  | tmp$full_component_inv_3==1 |\n",
-    "                                     tmp$full_component_NPM1==1 | tmp$full_component_CEBPA_bi==1 | \n",
-    "                                     tmp$full_component_DNMT3A_IDH1_2==1 |  tmp$full_component_WT1==1  ),\"full_component_additions\"] <- 0\n",
-    "\n",
-    "\n",
-    "tmp[tmp$full_component_additions==1 & (tmp$full_component_TP53_complex==1) & !(tmp$del_7==1 | tmp$del_17==1 | tmp$del_5==1 | tmp$del_9==1  | tmp$minusy |\n",
-    "                                                                           tmp$del_20==1 | tmp$del_18==1  | tmp$del_12==1 | tmp$del_3==1),\"full_component_additions\"] <- 0\n",
-    "\n",
-    "# Handling DNMT3A IDH\n",
-    "tmp[tmp$full_component_DNMT3A_IDH1_2==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 |  tmp$full_component_t_11==1 |\n",
-    "                                         tmp$full_component_t_6_9==1 |  tmp$full_component_inv_3==1 | tmp$full_component_TP53_complex==1 | tmp$full_component_NPM1==1 |\n",
-    "                                          tmp$full_component_CEBPA_bi==1 |  tmp$full_component_additions==1 ),\"full_component_DNMT3A_IDH1_2\"] <- 0\n",
-    "\n",
-    "\n",
-    "# Handling WT1\n",
-    "tmp[tmp$full_component_WT1==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 |  tmp$full_component_t_11==1 |\n",
-    "                               tmp$full_component_t_6_9==1  | tmp$full_component_inv_3==1 | tmp$full_component_TP53_complex==1 | tmp$full_component_NPM1==1 |\n",
-    "                                tmp$full_component_CEBPA_bi==1  ),\"full_component_WT1\"] <- 0\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Handling chr_splicing_1\n",
-    "tmp[tmp$full_component_chr_splicing_1==1 & (tmp$full_component_t_15_17==1 | tmp$full_component_inv_16==1 | tmp$full_component_t_8_21==1 | \n",
-    "                                          tmp$full_component_t_11==1 | tmp$full_component_t_6_9==1 |  tmp$full_component_inv_3==1 |\n",
-    "                                          tmp$full_component_TP53_complex==1 | tmp$full_component_NPM1==1 | tmp$full_component_CEBPA_bi==1  ),\"full_component_chr_splicing_1\"] <- 0\n",
-    "\n",
-    "tmp$full_component_not_assigned <- ifelse(rowSums(tmp[,colnames(tmp[,startsWith(colnames(tmp),\"full_component_\"),])])==0 ,1,0)\n",
-    "\n",
-    "tmp$full_component_no_events <- ifelse(rowSums(tmp[,c(genes,cyto)])==0,1,0)\n",
-    "\n",
-    "tmp$overlap <- 0\n",
-    "tmp[rowSums(tmp[,colnames(tmp[,startsWith(colnames(tmp),\"full_component_\"),])])>1,\"overlap\"] <- 1\n",
-    "\n",
-    "tmp <- cbind(tmp,dummy('eln_2017',tmp, sep = \"_\"))\n",
-    "\n",
-    "write.table(tmp,\"full_data_validation_NO_ITD.tsv\")"
    ]
   },
   {
