--- a/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,10 @@
     "\n",
     "# Handle  CR stat and Relapse stat\n",
     "\n",
+    "# For CR stat , we say that when CR is Na the status is 0 . That makes sense because for all other cases CR date is different \n",
+    "\n",
     "df_nejm$CR_stat <- ifelse(is.na(df_nejm$CR),0,1)\n",
-    "df_nejm[is.na(df_nejm$CR),\"Relapse_stat\"] <- 0\n",
+    "df_nejm[is.na(df_nejm$CR),\"Relapse_stat\"] <- 0  ## for relapse we keep relapse stat when available and we put 0 when patients did not experienced CR (because you need CR before Relapse)\n",
     "\n",
     "\n",
     "\n",
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -196,27 +198,34 @@
     "table(df_cardiff$molecular_classification)\n",
     "\n",
     "\n",
+    "# Remove NA values from Relapse Status (2125 to 2044 patients)\n",
+    "\n",
+    "df_cardiff <- df_cardiff[!is.na(df_cardiff$RelapseCIStatus),]              \n",
     "              \n",
-    "              \n",
-    "# Remove weird cases (11) : we do not know when they have relapsed or CR\n",
+    "# Remove weird cases (15) : we do not know when they have relapsed or CR\n",
     "\n",
     "\n",
-    "df_cardiff <- df_cardiff[!(df_cardiff$RelapseCIStatus==1 & !is.na(df_cardiff$RelapseCIStatus) & is.na(df_cardiff$OS_CR)),]\n",
-    "df_cardiff <- df_cardiff[!(df_cardiff$RelapseCIStatus==1 & !is.na(df_cardiff$RelapseCIStatus) & df_cardiff$os_status==1 & df_cardiff$RFSyears > df_cardiff$OS_CR),]   # you can not relapse from CR  after you die !!!\n",
-    "df_cardiff <- df_cardiff[!(df_cardiff$RFSyears==0 & !is.na(df_cardiff$RFSyears)),]  ### remove when Relapse is exactly 0!\n",
+    "df_cardiff <- df_cardiff[!(df_cardiff$RelapseCIStatus==1 & !is.na(df_cardiff$RelapseCIStatus) & is.na(df_cardiff$OS_CR)),] # 11 cases : they relapsed but we dont know when!\n",
+    "df_cardiff <- df_cardiff[!(df_cardiff$RelapseCIStatus==1 & !is.na(df_cardiff$RelapseCIStatus) & df_cardiff$os_status==1 & df_cardiff$RFSyears > df_cardiff$OS_CR),]   # 3 cases : you can not relapse from CR  after you die !!!\n",
+    "df_cardiff <- df_cardiff[!(df_cardiff$RFSyears==0 & !is.na(df_cardiff$RFSyears)),]  # 1 case :  remove when Relapse is exactly 0!\n",
     "\n",
     "\n",
     "# Handle CR\n",
     "\n",
-    "df_cardiff$CR_stat <- ifelse(is.na(df_cardiff$OS_CR),0,1)\n",
+    "df_cardiff$CR_stat <- ifelse(is.na(df_cardiff$OS_CR),0,1) \n",
+    "# we are confident to say that those NA OS_CR did not experienced CR because those are the only patients for which RFSyears is equal to overall survival .\n",
+    "# Other patients have relapse survival from CR different from overall survival which means that they experienced CR!\n",
+    "# Also for all that have CR_stat=1 with our rule , the RelapseCIStatus is Death without Relapse so it is concordant\n",
     "df_cardiff[is.na(df_cardiff$OS_CR),\"CR\"] <- df_cardiff[is.na(df_cardiff$OS_CR),\"os\"]\n",
-    "df_cardiff[!is.na(df_cardiff$OS_CR),\"CR\"]<- df_cardiff[!is.na(df_cardiff$OS_CR),\"os\"] - df_cardiff[!is.na(df_cardiff$OS_CR),\"OS_CR\"]\n",
+    "df_cardiff[!is.na(df_cardiff$OS_CR),\"CR\"]<- df_cardiff[!is.na(df_cardiff$OS_CR),\"os\"] - df_cardiff[!is.na(df_cardiff$OS_CR),\"OS_CR\"]   # time to CR from 0 : survial time - suvival time from CR\n",
     "\n",
     "# Handle RFS (relapse from first CR)\n",
     "\n",
     "df_cardiff$Relapse_stat <- ifelse(df_cardiff$RelapseCIStatus==1 & !is.na(df_cardiff$RelapseCIStatus),1,0)\n",
     "df_cardiff$Relapse <- df_cardiff$os\n",
-    "df_cardiff[df_cardiff$Relapse_stat==1,\"Relapse\"] <- df_cardiff[df_cardiff$Relapse_stat==1,\"CR\"] + df_cardiff[df_cardiff$Relapse_stat==1,\"RFSyears\"]\n",
+    "df_cardiff[df_cardiff$Relapse_stat==1,\"Relapse\"] <- df_cardiff[df_cardiff$Relapse_stat==1,\"CR\"] + df_cardiff[df_cardiff$Relapse_stat==1,\"RFSyears\"]   # time to Relapse from 0 = time to CR from 0   (above) + relapse free time from CR (RFSyears)\n",
+    "              \n",
+    "\n",
     "\n",
     "df_cardiff$OS <- df_cardiff$os\n",
     "df_cardiff$OS_stat <- df_cardiff$os_status\n",
@@ -230,17 +239,27 @@
     "df_cardiff$Death_without <- df_cardiff$OS\n",
     "df_cardiff$Death_without_stat <- ifelse(df_cardiff$CR_stat==0 & df_cardiff$Relapse_stat==0 & df_cardiff$OS_stat==1,1,0 )\n",
     "              \n",
-    "df_cardiff$Row.names <- NULL"
+    "df_cardiff$Row.names <- NULL\n",
+    "              \n",
+    "              \n",
+    "              "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
     "write.table(df_cardiff,\"df_cardiff_personnalization.tsv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
